--- a/dotNet5782_8995_8035/PL/DroneWindow.xaml
+++ b/dotNet5782_8995_8035/PL/DroneWindow.xaml
@@ -1,78 +1,106 @@
 ﻿<Window
+        x:Name="DroneWindowXaml"
+        x:Class="PL.DroneWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PL"
-        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" x:Class="PL.DroneWindow"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        Title="" 
         Height="600"
         Width="420"
-        Loaded="Loded">
+        Loaded="Loded"
+        Title="gdhfgdfg"
+    >
     <!--xmlns:controls="clr-namespace:Microsoft.Toolkit.Wpf.UI.Controls;assembly=Microsoft.Toolkit.Wpf.UI.Controls"-->
+
     <Window.Resources>
         <local:StateToText x:Key="stateToText"/>
         <local:BoolToVisability x:Key="boolToVisability"/>
     </Window.Resources>
 
-    <StackPanel x:Name="MainStack" Margin="5" Width="400" HorizontalAlignment="Left">
-        <Button Content="X" RenderTransformOrigin="-1.136,-0.1" Height="42" Width="49" Click="XButton" Background="#FFF90B0B" FontWeight="Bold" FontSize="20" HorizontalAlignment="Right"/>
-        <StackPanel Margin="3" Orientation="Horizontal">
-            <Label Content="Drone ID" Width="108" />
-            <TextBox x:Name="DroneID" Text="" materialDesign:HintAssist.Hint="Drone ID"  Width="180" TextChanged="DroneIdTextChanged" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
+    <Grid>
+
+        <StackPanel x:Name="AddingStack" Visibility="Collapsed"  Margin="5" Width="400" HorizontalAlignment="Left">
+            <Button Content="X" RenderTransformOrigin="-1.136,-0.1" Height="42" Width="49" Click="XButton" Background="#FFF90B0B" FontWeight="Bold" FontSize="20" HorizontalAlignment="Right"/>
+            <StackPanel Margin="3" Orientation="Horizontal">
+                <Label Content="Drone ID" Width="108" />
+                <TextBox x:Name="DroneID" Text="{Binding Id, Mode=TwoWay,  NotifyOnValidationError=True, ValidatesOnExceptions=True}" materialDesign:HintAssist.Hint="Drone ID"  Width="180" TextChanged="DroneIdTextChanged" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
+            </StackPanel>
+            <StackPanel Margin="3" Orientation="Horizontal">
+                <Label Content="weight Category"  Width="108"  />
+                <ComboBox x:Name="WeightInput" Text="{Binding MaxWeight, Mode=TwoWay,  NotifyOnValidationError=True, ValidatesOnExceptions=True}" Width="180" materialDesign:HintAssist.Hint="weight Category" />
+            </StackPanel>
+            <StackPanel Margin="3" Orientation="Horizontal">
+                <Label Content="Model" Width="108" />
+                <TextBox x:Name="ModelInput" Text="{Binding Model, Mode=TwoWay,  NotifyOnValidationError=True, ValidatesOnExceptions=True}" materialDesign:HintAssist.Hint="Model" TextWrapping="Wrap" Width="180" RenderTransformOrigin="0.596,0.084" TextChanged="ModelUpdatedChanged" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
+            </StackPanel>
+            <Button x:Name="AddingButton" Margin="3" Content="Add New Drone" Width="180" Click="AddDroneButton" />
+
         </StackPanel>
-        <StackPanel Margin="3" Orientation="Horizontal">
-            <Label Content="weight Category" Width="108"  />
-            <ComboBox x:Name="Weight" Text="" Width="180" materialDesign:HintAssist.Hint="weight Category" />
-        </StackPanel>
-        <StackPanel Margin="3" Orientation="Horizontal">
-            <Label Content="Model" Width="108" />
-            <TextBox x:Name="Model" Text="" materialDesign:HintAssist.Hint="Model" TextWrapping="Wrap" Width="180" RenderTransformOrigin="0.596,0.084" TextChanged="ModelUpdatedChanged" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
-            <Button x:Name="UpdateModel"
+
+        <StackPanel x:Name="OptionStack" Margin="5" Visibility="Collapsed" Width="400" HorizontalAlignment="Left">
+            <Button Content="X" RenderTransformOrigin="-1.136,-0.1" Height="42" Width="49" Click="XButton" Background="#FFF90B0B" FontWeight="Bold" FontSize="20" HorizontalAlignment="Right"/>
+            <StackPanel Margin="3" Orientation="Horizontal">
+                <Label Content="Drone ID" Width="108" />
+                <TextBox x:Name="Id" Text="{Binding Id, Mode=TwoWay,  NotifyOnValidationError=True, ValidatesOnExceptions=True}"  materialDesign:HintAssist.Hint="Drone ID"  Width="180" TextChanged="DroneIdTextChanged" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
+            </StackPanel>
+            <StackPanel Margin="3" Orientation="Horizontal">
+                <Label Content="weight StackPanelCategory"  Width="108"  />
+                <TextBox x:Name="Weight" Text="{Binding MaxWeight, Mode=TwoWay,  NotifyOnValidationError=True, ValidatesOnExceptions=True}" Width="180" materialDesign:HintAssist.Hint="weight Category" />
+            </StackPanel>
+            <StackPanel Margin="3" Orientation="Horizontal">
+                <Label Content="Model" Width="108" />
+                <TextBox x:Name="Model" Text="{Binding Model, Mode=TwoWay,  NotifyOnValidationError=True, ValidatesOnExceptions=True}" materialDesign:HintAssist.Hint="Model" TextWrapping="Wrap" Width="180" RenderTransformOrigin="0.596,0.084" TextChanged="ModelUpdatedChanged" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
+                <Button x:Name="UpdateModel"
                     Style="{StaticResource MaterialDesignRaisedButton}"
                     materialDesign:ButtonProgressAssist.Value="-1"
                     materialDesign:ButtonProgressAssist.IsIndicatorVisible="True"
                     materialDesign:ButtonProgressAssist.IsIndeterminate="True"
                     Content="Update"
                     Margin="2,0"
-                    IsEnabled="{Binding DataContext.ControlsEnabled, RelativeSource={RelativeSource FindAncestor, AncestorType=Window}}" Width="78" Height="29" 
-                    Visibility="{Binding}" Click="UpdateModel_Click"/>
-        </StackPanel>
-        <StackPanel Margin="3" Orientation="Horizontal">
-            <Label x:Name="BatteryText" Content="Battery" Visibility="{Binding}" RenderTransformOrigin="0.22,-0.281" Width="108"  />
-            <Label x:Name="BatteryLabel" Content="" Visibility="{Binding}"  Width="180" />
-        </StackPanel>
-        <StackPanel Margin="3" Orientation="Horizontal">
-            <Label x:Name="StatusText" Content="Status" Visibility="{Binding}" Width="108" />
-            <Label x:Name="StatusLabel" Content="" Visibility="{Binding}" RenderTransformOrigin="0.57,0.52" Width="180" />
-        </StackPanel>
-        <StackPanel Margin="3" Orientation="Horizontal">
-            <Label x:Name="ParcelText" Content="parcelId" Visibility="{Binding}" RenderTransformOrigin="0.22,-0.281" Width="108" />
-            <Label x:Name="ParcelLabel" Content="" Visibility="{Binding}" Width="180" />
-        </StackPanel>
-        <StackPanel Margin="3" Orientation="Horizontal">
-            <Label x:Name="LocationText" Content="Location" Visibility="{Binding}" Width="108" />
-            <StackPanel>
-                <Label x:Name="LongtudeText" Content="" Visibility="{Binding}" Width="180" />
-                <Label x:Name="LatitudeText" Content="" Visibility="{Binding}" RenderTransformOrigin="0.024,-0.193" Width="180"/>
+                    
+                    Width="78" Height="29" 
+                    Visibility="Collapsed" 
+                    Click="UpdateModel_Click"/>
             </StackPanel>
+            <StackPanel Margin="3" Orientation="Horizontal">
+                <Label x:Name="BatteryText" Content="Battery" RenderTransformOrigin="0.22,-0.281" Width="108"  />
+                <TextBox x:Name="BatteryLabel" Text="{Binding Battery, Mode=TwoWay,  NotifyOnValidationError=True, ValidatesOnExceptions=True}" Width="180" />
+            </StackPanel>
+            <StackPanel Margin="3" Orientation="Horizontal">
+                <Label x:Name="StatusText" Content="Status"  Width="108" />
+                <TextBox x:Name="StatusLabel" Text="{Binding Status, Mode=TwoWay,  NotifyOnValidationError=True, ValidatesOnExceptions=True}" RenderTransformOrigin="0.57,0.52" Width="180" />
+            </StackPanel>
+            <StackPanel Margin="3"  Orientation="Horizontal">
+                <Label x:Name="ParcelText" Content="parcelId" RenderTransformOrigin="0.22,-0.281" Width="108" />
+                <TextBox x:Name="ParcelLabel" Text="{Binding ParcelInDelivery.Id, Mode=TwoWay,  NotifyOnValidationError=True, ValidatesOnExceptions=True}" Width="180" />
+                <Button Content="TheParcel" Height="37" Width="156" Click="Open_Prcel_Click"/>
+            </StackPanel>
+            <StackPanel Margin="3" Orientation="Horizontal">
+                <Label x:Name="LocationText" Content="Location" Width="108" />
+                <StackPanel>
+                    <TextBox x:Name="LongtudeText" Text="{Binding Location.Longitude, Mode=TwoWay,  NotifyOnValidationError=True, ValidatesOnExceptions=True}" Width="180" />
+                    <TextBox x:Name="LatitudeText" Text="{Binding Location.Latitude, Mode=TwoWay,  NotifyOnValidationError=True, ValidatesOnExceptions=True}" RenderTransformOrigin="0.024,-0.193" Width="180"/>
+                </StackPanel>
+            </StackPanel>
+
+            <!--<Button x:Name="AddingButton" Margin="3" Content="Add New Drone" Width="180" Click="AddDroneButton" />-->
+
+            <Button x:Name="GoToCharge" Margin="3" Visibility="{Binding ElementName=DroneWindowXaml, Path=isVisieble , Mode=OneWayToSource}" Content="go to charge" Width="180" Click="GoToCharge_Click" />
+
+            <Button x:Name="ReliceDroneFromCharge" Margin="3" Content="Uncharge Drone" Visibility="{Binding}" Width="180" Click="ReliceDroneFromCharge_Click"/>
+
+            <StackPanel Margin="3" Visibility="{Binding}" Orientation="Horizontal" HorizontalAlignment="Center" >
+                <Label x:Name="LabelMinutsInCharge" Content="Insert Minutes:" VerticalAlignment="Center"/>
+                <TextBox x:Name="MinutesInput" Text="" materialDesign:HintAssist.Hint="Minutes in charge" TextWrapping="Wrap" Width="99" RenderTransformOrigin="0.596,0.084" TextChanged="MinutesInputChanged" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
+                <materialDesign:PackIcon Kind="BatteryCharging30" RenderTransformOrigin="0.557,1.734" Height="36" />
+            </StackPanel>
+
+            <Button x:Name="DeliveringOption" Margin="3" Visibility="{Binding}" Width="174" Click="Button_Click"  />
+            <ProgressBar x:Name="ProgresDelivery" Visibility="{Binding}" Value="33" Height="10" />
+           
         </StackPanel>
-
-        <Button x:Name="AddingButton" Margin="3" Content="Add New Drone" Width="180" Click="AddDroneButton" />
-        
-        <Button x:Name="GoToCharge" Margin="3" Content="go to charge" Visibility="{Binding}" Width="180" Click="GoToCharge_Click" />
-
-        <Button x:Name="ReliceDroneFromCharge" Margin="3" Content="Uncharge Drone" Visibility="{Binding}" Width="180" Click="ReliceDroneFromCharge_Click"/>
-        <StackPanel Margin="3" Orientation="Horizontal" HorizontalAlignment="Center" >
-            <Label x:Name="LabelMinutsInCharge" Content="Insert Minutes:" Visibility="{Binding}"  VerticalAlignment="Center"/>
-            <TextBox x:Name="MinutesInput" Text="" Visibility="{Binding}" materialDesign:HintAssist.Hint="Minutes in charge" TextWrapping="Wrap" Width="99" RenderTransformOrigin="0.596,0.084" TextChanged="MinutesInputChanged" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
-            <materialDesign:PackIcon Kind="BatteryCharging30" Visibility="{Binding}" RenderTransformOrigin="0.557,1.734" Height="36" />
-        </StackPanel>
-
-        <Button x:Name="DeliveringOption" Margin="3" Visibility="{Binding}" Content="{Binding ElementName=StatusText , Path=Content, UpdateSourceTrigger=PropertyChanged}"  Width="174" Click="Button_Click"  />
-        <ProgressBar x:Name="ProgresDelivery" Visibility="{Binding}" Value="33" Height="10" />
-       
-    </StackPanel>
-
+    </Grid>
 </Window>
