--- a/dotNet5782_8995_8035/PL/ListOfDronesViewWindow.xaml
+++ b/dotNet5782_8995_8035/PL/ListOfDronesViewWindow.xaml
@@ -36,7 +36,7 @@
 
         <ComboBox x:Name="WeightSelecter" ItemsSource="{Binding}" Margin="27,24,27,5" Grid.Column="2" SelectedIndex="3" SelectionChanged ="WeightChoose" FontFamily="Segoe Print"/>
         
-        <ListView x:Name="ListOfDronesView" Grid.Row="1" Margin="10,10,6,208" RenderTransformOrigin="0.831,0.089" Grid.ColumnSpan="5" MouseDoubleClick="ClickedItem" MinHeight="5" >
+        <ListView x:Name="ListOfDronesView" ItemsSource="{Binding}" Grid.Row="1" Margin="10,10,6,208" RenderTransformOrigin="0.831,0.089" Grid.ColumnSpan="5" MouseDoubleClick="ClickedItem" MinHeight="5" >
             <ListView.Background>
                 <ImageBrush Opacity="10" ImageSource="/images/5.jpg"/>
             </ListView.Background>
