--- a/dotNet5782_8995_8035/PL/DroneWindow.xaml
+++ b/dotNet5782_8995_8035/PL/DroneWindow.xaml
@@ -13,12 +13,13 @@
         Loaded="Loded"
         Title="{Binding}"
     >
-    <!--xmlns:controls="clr-namespace:Microsoft.Toolkit.Wpf.UI.Controls;assembly=Microsoft.Toolkit.Wpf.UI.Controls"-->
-
+    
     <Window.Resources>
         <local:StateToChargeState x:Key="stateToCharge"/>
         <local:ParcelNumberToParcelState x:Key="ParcelNumberToState"/>
         <local:StatusToParcelVisability x:Key="StatusToParcelVisability"/>
+        <local:ParcelStausToDeliveringOptionText x:Key="parcelStausToDeliveringOptionText"/>
+        <local:DroneBattryToChargeVisability x:Key="DroneBattryToChargeVisability"/>
     </Window.Resources>
 
     <Grid >
@@ -48,15 +49,15 @@
 
         <StackPanel x:Name="OptionStack" Margin="5" Visibility="Visible" HorizontalAlignment="Stretch">
             <Button Content="X" RenderTransformOrigin="-1.136,-0.1" Height="40" Width="45" Click="XButton" Background="#FFF90B0B" FontWeight="Bold" FontSize="20" HorizontalAlignment="Right"/>
-            <StackPanel Margin="3" Orientation="Horizontal">
+            <StackPanel Height="50" Margin="3" Orientation="Horizontal">
                 <Label Content="Drone ID" Width="108" />
                 <TextBox x:Name="Id" Text="{Binding Id, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}" IsReadOnly="True" materialDesign:HintAssist.Hint="Drone ID"  Width="180" TextChanged="DroneIdTextChanged" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
             </StackPanel>
-            <StackPanel Margin="3" Orientation="Horizontal">
+            <StackPanel Height="50" Margin="3" Orientation="Horizontal">
                 <Label Content="weight StackPanelCategory"  Width="108"  />
                 <TextBox x:Name="Weight" Text="{Binding MaxWeight, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}" Width="180" IsReadOnly="True" materialDesign:HintAssist.Hint="weight Category" />
             </StackPanel>
-            <StackPanel Margin="3" Orientation="Horizontal">
+            <StackPanel Height="50" Margin="3" Orientation="Horizontal">
                 <Label Content="Model" Width="108" />
                 <TextBox x:Name="Model" Text="{Binding Model, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}" materialDesign:HintAssist.Hint="Model" TextWrapping="Wrap" Width="180" RenderTransformOrigin="0.596,0.084" TextChanged="ModelUpdatedChanged" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
                 <Button x:Name="UpdateModel"
@@ -70,23 +71,23 @@
                     Width="80" Height="25" 
                     Click="UpdateModel_Click"/>
             </StackPanel>
-            <StackPanel Margin="3" Orientation="Horizontal">
+            <StackPanel Height="50" Margin="3" Orientation="Horizontal">
                 <Label x:Name="BatteryText" Content="Battery" RenderTransformOrigin="0.22,-0.281" Width="108"  />
                 <TextBox x:Name="BatteryLabel" Text="{Binding Battery, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}" IsReadOnly="True" Width="180" />
-                <Button x:Name="ChargeAndUnchargeButton" Content="{Binding Status, Converter={StaticResource stateToCharge}}" Margin="5,5,5,5" Width="80" Height="25" Click="ChargeAndUnchargeButton_Click"/>
-                <materialDesign:PackIcon Kind="BatteryCharging30" RenderTransformOrigin="0.557,1.734" Height="36" Width="26" />
+                <Button x:Name="ChargeAndUnchargeButton" Content="{Binding Status, Converter={StaticResource stateToCharge}}" Visibility="{Binding Converter={StaticResource DroneBattryToChargeVisability}}" Margin="5,5,5,5" Width="80" Height="25" Click="ChargeAndUnchargeButton_Click"/>
+                <materialDesign:PackIcon Kind="BatteryCharging30" Visibility="{Binding Converter={StaticResource DroneBattryToChargeVisability}}" RenderTransformOrigin="0.557,1.734" Height="36" Width="26" />
             </StackPanel>
-            <StackPanel Margin="3" Orientation="Horizontal">
+            <StackPanel Height="50" Margin="3" Orientation="Horizontal">
                 <Label x:Name="StatusText" Content="Status"  Width="108" />
                 <TextBox x:Name="StatusLabel" Text="{Binding Status, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}" IsReadOnly="True" RenderTransformOrigin="0.57,0.52" Width="180" />
             </StackPanel>
-            <StackPanel Margin="3"  Orientation="Horizontal">
+            <StackPanel Height="50" Margin="3"  Orientation="Horizontal">
                 <Label x:Name="ParcelText" Content="parcelId" RenderTransformOrigin="0.22,-0.281" Width="108" />
                 <TextBox x:Name="ParcelLabel" Text="{Binding ParcelInDelivery.Id,Converter={StaticResource ParcelNumberToState} , Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}"  IsReadOnly="True" Width="180" />
                 <Button Content="Open" Margin="5,5,5,5" Height="25" Width="80" Click="Open_Prcel_Click" Visibility="{Binding Status , Converter={StaticResource StatusToParcelVisability}}" RenderTransformOrigin="0.5,0.5" />
                 <materialDesign:PackIcon Kind="PackageVariant" Height="30" Width="36" Visibility="{Binding Status , Converter={StaticResource StatusToParcelVisability}}" RenderTransformOrigin="1.25,0.569" />
             </StackPanel>
-            <StackPanel Margin="3" Orientation="Horizontal">
+            <StackPanel Height="50" Margin="3" Orientation="Horizontal">
                 <Label x:Name="LocationText" Content="Location" Width="108" />
                 <StackPanel>
                     <TextBox x:Name="LongtudeText" Text="{Binding Location.Longitude, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}" IsReadOnly="True" Width="180" />
@@ -94,17 +95,8 @@
                 </StackPanel>
             </StackPanel>
 
-            <!--<Button x:Name="GoToCharge" Margin="3" Content="go to charge" Width="180" Click="GoToCharge_Click" />
-
-            <Button x:Name="ReliceDroneFromCharge" Margin="3" Content="Uncharge Drone" Width="180" Click="ReliceDroneFromCharge_Click"/>-->
-
-            <StackPanel Margin="3" Orientation="Horizontal" HorizontalAlignment="Center" >
-                <Label x:Name="LabelMinutsInCharge" Content="Insert Minutes:" VerticalAlignment="Center"/>
-                <TextBox x:Name="MinutesInput" Text="" materialDesign:HintAssist.Hint="Minutes in charge" TextWrapping="Wrap" Width="99" RenderTransformOrigin="0.596,0.084" TextChanged="MinutesInputChanged" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
-
-            </StackPanel>
-
-            <Button x:Name="DeliveringOption" Margin="3" Width="174" Click="DeliveringOption_Click"  />
+            <Button x:Name="DeliveringOption" Content="{Binding Converter={StaticResource parcelStausToDeliveringOptionText}}" Margin="3" Width="174" Click="DeliveringOption_Click"  />
+            
             <ProgressBar x:Name="ProgresDelivery" Value="33" Height="10" />
 
 
