--- a/dotNet5782_8995_8035/PL/ListOfDronesViewWindow.xaml
+++ b/dotNet5782_8995_8035/PL/ListOfDronesViewWindow.xaml
@@ -5,65 +5,234 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PL"
-        xmlns:BO="clr-namespace:IBAL.BO;assembly=BL" x:Class="PL.ListOfDronesViewWindow"
+        xmlns:BO="clr-namespace:IBAL.BO;assembly=BL"
+        x:Class="PL.ListsViewWindow"
         mc:Ignorable="d"
-        Title="ListOfDronesViewWindow" Height="550" Width="1225" Loaded="Loded"
+        Title="Lists View" Height="550" Width="1225" Loaded="Loded"
         ResizeMode="NoResize">
 
     <Window.Resources>
-        <!--<local:DoubleToInt x:Key="converters"/>-->
+
     </Window.Resources>
 
-    <Window.Background>
+    <!--<Window.Background>
         <ImageBrush ImageSource = "/images/5.jpg" Stretch="UniformToFill" />
-    </Window.Background>
+    </Window.Background>-->
+
+    <TabControl>
+        <TabItem x:Name="DronesView" Header="Drone List" Width="100">
+            <Grid x:Name="MainGrid">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="25*"/>
+                    <ColumnDefinition Width="25*"/>
+                    <ColumnDefinition Width="25*"/>
+                    <ColumnDefinition Width="24*"/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="50*"/>
+                    <RowDefinition Height="400*"/>
+                </Grid.RowDefinitions>
+
+                <ComboBox x:Name="StatusSelector" ItemsSource="{Binding}" Margin="27,24,27,5" Grid.Column="1" SelectedIndex="3" SelectionChanged ="StatusChoose" FontFamily="Segoe Print"/>
+
+                <ComboBox x:Name="WeightSelecter" ItemsSource="{Binding}" Margin="27,24,27,5" Grid.Column="2" SelectedIndex="3" SelectionChanged ="WeightChoose" FontFamily="Segoe Print"/>
+
+                <ListView x:Name="DroneList" ItemsSource="{Binding}" Grid.Row="1" Margin="10,10,10,10" RenderTransformOrigin="0.831,0.089" Grid.ColumnSpan="5" MouseDoubleClick="ClickedDroneInList" MinHeight="5" >
+                    <ListView.Background>
+                        <ImageBrush Opacity="10" ImageSource="/images/5.jpg"/>
+                    </ListView.Background>
+                    <ListView.View>
+                        <GridView>
+                            <GridViewColumn Header = "ID" DisplayMemberBinding="{Binding Path = Id}" />
+                            <GridViewColumn Header = "Model" DisplayMemberBinding="{Binding Path = Model}" />
+                            <GridViewColumn Header = "Weight" DisplayMemberBinding="{Binding Path = Weight}" />
+                            <GridViewColumn Header = "Battery" DisplayMemberBinding="{Binding Path = Battery , Converter={StaticResource converters}}" />
+                            <GridViewColumn Header = "Status" DisplayMemberBinding="{Binding Path = Status}" />
+                            <GridViewColumn Header = "location" DisplayMemberBinding="{Binding Path = Location}" />
+                            <GridViewColumn Header = "ParcelId" DisplayMemberBinding="{Binding Path = ParcelId}" />
+                        </GridView>
+                    </ListView.View>
+                </ListView>
+                <Button Content="Add Drone" Margin="0,10,0,10" Click="AddDrone_Click" HorizontalAlignment="Center" Width="180"  />
+                <Label Content="Status selector" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Top" Width="156" Height="39" ScrollViewer.HorizontalScrollBarVisibility="Visible" FontFamily="Forte" FontSize="20" Background="Transparent" Foreground="#DDC3B63C" Margin="81,-7,0,0">
+                    <Label.Effect>
+                        <DropShadowEffect/>
+                    </Label.Effect>
+                </Label>
+                <Label Content="weight selector" Grid.Column="2" HorizontalAlignment="Left" VerticalAlignment="Top" Width="156" Height="39" ScrollViewer.HorizontalScrollBarVisibility="Visible" FontFamily="Forte" FontSize="20" Background="Transparent" Foreground="#DDC3B63C" Margin="81,-7,0,0">
+                    <Label.Effect>
+                        <DropShadowEffect/>
+                    </Label.Effect>
+                </Label>
+                <Button Content="X" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="-1.136,-0.1" Height="39" Width="52" Click="XButton" Background="#FFF90B0B" FontWeight="Bold" FontSize="20" Grid.Column="3" Margin="254,0,0,0" Grid.ColumnSpan="2"/>
+
+            </Grid>
+        </TabItem>
+
+        <TabItem Name="ParcelList" Header="Parcel List" Width="100">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="25*"/>
+                    <ColumnDefinition Width="25*"/>
+                    <ColumnDefinition Width="25*"/>
+                    <ColumnDefinition Width="24*"/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="50*"/>
+                    <RowDefinition Height="400*"/>
+                </Grid.RowDefinitions>
+
+                <!--<Label Content="Status selector" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Top" Width="156" Height="39" ScrollViewer.HorizontalScrollBarVisibility="Visible" FontFamily="Forte" FontSize="20" Background="Transparent" Foreground="#DDC3B63C" Margin="81,-7,0,0">
+                    <Label.Effect>
+                        <DropShadowEffect/>
+                    </Label.Effect>
+                </Label>
+                <ComboBox x:Name="Selector" ItemsSource="{Binding}" Margin="27,24,27,5" Grid.Column="1" SelectedIndex="3" SelectionChanged ="StatusChoose" FontFamily="Segoe Print"/>
+
+                <Label Content="weight selector" Grid.Column="2" HorizontalAlignment="Left" VerticalAlignment="Top" Width="156" Height="39" ScrollViewer.HorizontalScrollBarVisibility="Visible" FontFamily="Forte" FontSize="20" Background="Transparent" Foreground="#DDC3B63C" Margin="81,-7,0,0">
+                    <Label.Effect>
+                        <DropShadowEffect/>
+                    </Label.Effect>
+                </Label>
+                <ComboBox x:Name="Selecter" ItemsSource="{Binding}" Margin="27,24,27,5" Grid.Column="2" SelectedIndex="3" SelectionChanged ="WeightChoose" FontFamily="Segoe Print"/>-->
+
+                <ListView x:Name="ListOfParcelsView" ItemsSource="{Binding}" Grid.Row="1" Margin="10,10,10,10" RenderTransformOrigin="0.831,0.089" Grid.ColumnSpan="5" MouseDoubleClick="ClickedParcelInList" MinHeight="5" >
+                    <ListView.Background>
+                        <ImageBrush Opacity="10" ImageSource="/images/5.jpg"/>
+                    </ListView.Background>
+                    <ListView.View>
+                        <GridView>
+                            <GridViewColumn Header = "Id" DisplayMemberBinding="{Binding Path = Id}" />
+                            <GridViewColumn Header = "SenderName" DisplayMemberBinding="{Binding Path = SenderName}" />
+                            <GridViewColumn Header = "ReceiverName" DisplayMemberBinding="{Binding Path = ReceiverName}" />
+                            <GridViewColumn Header = "Weight" DisplayMemberBinding="{Binding Path = Weight}" />
+                            <GridViewColumn Header = "Priority" DisplayMemberBinding="{Binding Path = Priority}" />
+                            <GridViewColumn Header = "Status" DisplayMemberBinding="{Binding Path = Status}" />
+                        </GridView>
+                    </ListView.View>
+                </ListView>
+
+                <Button Content="Add Parcel" Margin="0,10,0,10" Click="AddParcel_Click" HorizontalAlignment="Center" Width="180"  />
 
 
-    <Grid x:Name="MainGrid">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="25*"/>
-            <ColumnDefinition Width="25*"/>
-            <ColumnDefinition Width="25*"/>
-            <ColumnDefinition Width="24*"/>
-            <ColumnDefinition/>
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="50*"/>
-            <RowDefinition Height="400*"/>
-        </Grid.RowDefinitions>
+                <Button Content="X" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="-1.136,-0.1" Height="39" Width="52" Click="XButton" Background="#FFF90B0B" FontWeight="Bold" FontSize="20" Grid.Column="3" Margin="254,0,0,0" Grid.ColumnSpan="2"/>
 
-        <ComboBox x:Name="StatusSelector" ItemsSource="{Binding}" Margin="27,24,27,5" Grid.Column="1" SelectedIndex="3" SelectionChanged ="StatusChoose" FontFamily="Segoe Print"/>
+            </Grid>
 
-        <ComboBox x:Name="WeightSelecter" ItemsSource="{Binding}" Margin="27,24,27,5" Grid.Column="2" SelectedIndex="3" SelectionChanged ="WeightChoose" FontFamily="Segoe Print"/>
-        
-        <ListView x:Name="ListOfDronesView" ItemsSource="{Binding}" Grid.Row="1" Margin="10,10,6,208" RenderTransformOrigin="0.831,0.089" Grid.ColumnSpan="5" MouseDoubleClick="ClickedItem" MinHeight="5" >
-            <ListView.Background>
-                <ImageBrush Opacity="10" ImageSource="/images/5.jpg"/>
-            </ListView.Background>
-            <ListView.View>
-                <GridView>
-                    <GridViewColumn Header = "ID" DisplayMemberBinding="{Binding Path = Id}" />
-                    <GridViewColumn Header = "Model" DisplayMemberBinding="{Binding Path = Model}" />
-                    <GridViewColumn Header = "Weight" DisplayMemberBinding="{Binding Path = Weight}" />
-                    <GridViewColumn Header = "Battery" DisplayMemberBinding="{Binding Path = Battery , Converter={StaticResource converters}}" />
-                    <GridViewColumn Header = "Status" DisplayMemberBinding="{Binding Path = Status}" />
-                    <GridViewColumn Header = "location" DisplayMemberBinding="{Binding Path = Location}" />
-                    <GridViewColumn Header = "ParcelId" DisplayMemberBinding="{Binding Path = ParcelId}" />
-                </GridView>
-            </ListView.View>
-        </ListView>
-        <Button Content="add drone" Margin="0,10,0,10" Click="Button_Click" HorizontalAlignment="Center" Width="180"  />
-        <Label Content="Status selector" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Top" Width="156" Height="39" ScrollViewer.HorizontalScrollBarVisibility="Visible" FontFamily="Forte" FontSize="20" Background="Transparent" Foreground="#DDC3B63C" Margin="81,-7,0,0">
-            <Label.Effect>
-                <DropShadowEffect/>
-            </Label.Effect>
-        </Label>
-        <Label Content="weight selector" Grid.Column="2" HorizontalAlignment="Left" VerticalAlignment="Top" Width="156" Height="39" ScrollViewer.HorizontalScrollBarVisibility="Visible" FontFamily="Forte" FontSize="20" Background="Transparent" Foreground="#DDC3B63C" Margin="81,-7,0,0">
-            <Label.Effect>
-                <DropShadowEffect/>
-            </Label.Effect>
-        </Label>
-        <Button Content="X" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="-1.136,-0.1" Height="39" Width="52" Click="XButton" Background="#FFF90B0B" FontWeight="Bold" FontSize="20" Grid.Column="3" Margin="254,0,0,0" Grid.ColumnSpan="2"/>
+        </TabItem>
 
-    </Grid>
+
+        <TabItem Name="BaseStationList" Header="Base Station List" Width="100">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="25*"/>
+                    <ColumnDefinition Width="25*"/>
+                    <ColumnDefinition Width="25*"/>
+                    <ColumnDefinition Width="24*"/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="50*"/>
+                    <RowDefinition Height="400*"/>
+                </Grid.RowDefinitions>
+
+                <!--<Label Content="Status selector" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Top" Width="156" Height="39" ScrollViewer.HorizontalScrollBarVisibility="Visible" FontFamily="Forte" FontSize="20" Background="Transparent" Foreground="#DDC3B63C" Margin="81,-7,0,0">
+                    <Label.Effect>
+                        <DropShadowEffect/>
+                    </Label.Effect>
+                </Label>
+                <ComboBox x:Name="Selector" ItemsSource="{Binding}" Margin="27,24,27,5" Grid.Column="1" SelectedIndex="3" SelectionChanged ="StatusChoose" FontFamily="Segoe Print"/>
+
+                <Label Content="weight selector" Grid.Column="2" HorizontalAlignment="Left" VerticalAlignment="Top" Width="156" Height="39" ScrollViewer.HorizontalScrollBarVisibility="Visible" FontFamily="Forte" FontSize="20" Background="Transparent" Foreground="#DDC3B63C" Margin="81,-7,0,0">
+                    <Label.Effect>
+                        <DropShadowEffect/>
+                    </Label.Effect>
+                </Label>
+                <ComboBox x:Name="Selecter" ItemsSource="{Binding}" Margin="27,24,27,5" Grid.Column="2" SelectedIndex="3" SelectionChanged ="WeightChoose" FontFamily="Segoe Print"/>-->
+
+                <ListView x:Name="ListOfBaseStationsView" ItemsSource="{Binding}" SelectedIndex="0" Margin="10,10,10,10" RenderTransformOrigin="0.831,0.089" MouseDoubleClick="ClickedBaseStationInList" MinHeight="5" Grid.ColumnSpan="5" Grid.Row="1" >
+                    <ListView.Background>
+                        <ImageBrush Opacity="10" ImageSource="/images/5.jpg"/>
+                    </ListView.Background>
+                    <ListView.View>
+                        <GridView>
+                            <GridViewColumn Header = "Id" DisplayMemberBinding="{Binding Path = Id}" />
+                            <GridViewColumn Header = "Name" DisplayMemberBinding="{Binding Path = Name}" />
+                            <GridViewColumn Header = "FreeChargingSlots" DisplayMemberBinding="{Binding Path = FreeChargingSlots}" />
+                            <GridViewColumn Header = "TakenCharingSlots" DisplayMemberBinding="{Binding Path = TakenCharingSlots}" />
+                        </GridView>
+                    </ListView.View>
+                </ListView>
+
+                <Button Content="Add Base Station" Margin="0,10,0,10" Click="AddBaseStationButton_Click" HorizontalAlignment="Center" Width="180"  />
+
+
+                <Button Content="X" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="-1.136,-0.1" Height="39" Width="52" Click="XButton" Background="#FFF90B0B" FontWeight="Bold" FontSize="20" Grid.Column="3" Margin="254,0,0,0" Grid.ColumnSpan="2"/>
+                <ComboBox x:Name="NumberOfSlotsSelector" ItemsSource="{Binding}" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" Width="215" Height="32" SelectionChanged="BaseStationGuopingSelected"/>
+
+            </Grid>
+
+        </TabItem>
+
+
+        <TabItem Name="CustomerList" Header="Customer List" Width="100">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="25*"/>
+                    <ColumnDefinition Width="25*"/>
+                    <ColumnDefinition Width="25*"/>
+                    <ColumnDefinition Width="24*"/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="50*"/>
+                    <RowDefinition Height="400*"/>
+                </Grid.RowDefinitions>
+
+                <!--<Label Content="Status selector" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Top" Width="156" Height="39" ScrollViewer.HorizontalScrollBarVisibility="Visible" FontFamily="Forte" FontSize="20" Background="Transparent" Foreground="#DDC3B63C" Margin="81,-7,0,0">
+                    <Label.Effect>
+                        <DropShadowEffect/>
+                    </Label.Effect>
+                </Label>
+                <ComboBox x:Name="Selector" ItemsSource="{Binding}" Margin="27,24,27,5" Grid.Column="1" SelectedIndex="3" SelectionChanged ="StatusChoose" FontFamily="Segoe Print"/>
+
+                <Label Content="weight selector" Grid.Column="2" HorizontalAlignment="Left" VerticalAlignment="Top" Width="156" Height="39" ScrollViewer.HorizontalScrollBarVisibility="Visible" FontFamily="Forte" FontSize="20" Background="Transparent" Foreground="#DDC3B63C" Margin="81,-7,0,0">
+                    <Label.Effect>
+                        <DropShadowEffect/>
+                    </Label.Effect>
+                </Label>
+                <ComboBox x:Name="Selecter" ItemsSource="{Binding}" Margin="27,24,27,5" Grid.Column="2" SelectedIndex="3" SelectionChanged ="WeightChoose" FontFamily="Segoe Print"/>-->
+
+                <ListView x:Name="ListOfCustomersView" ItemsSource="{Binding}" Margin="10,10,10,10" RenderTransformOrigin="0.831,0.089" MouseDoubleClick="ClickedCustomerInList" MinHeight="5" Grid.ColumnSpan="5" Grid.RowSpan="2" >
+                    <ListView.Background>
+                        <ImageBrush Opacity="10" ImageSource="/images/5.jpg"/>
+                    </ListView.Background>
+                    <ListView.View>
+                        <GridView>
+                            <GridViewColumn Header = "Id" DisplayMemberBinding="{Binding Path = Id}" />
+                            <GridViewColumn Header = "Phone" DisplayMemberBinding="{Binding Path = Phone}" />
+                            <GridViewColumn Header = "SentToAndDeliverd" DisplayMemberBinding="{Binding Path = SentToAndDeliverd}" />
+                            <GridViewColumn Header = "SentToAnDNotDelivered" DisplayMemberBinding="{Binding Path = SentToAnDNotDelivered}" />
+                            <GridViewColumn Header = "SentFromAndDeliverd" DisplayMemberBinding="{Binding Path = SentFromAndDeliverd}" />
+                            <GridViewColumn Header = "SentToAnDNotDelivered" DisplayMemberBinding="{Binding Path = SentFromAndNotDeliverd}" />
+                        </GridView>
+                    </ListView.View>
+                </ListView>
+
+                <Button Content="Add Customer" Margin="0,12,63,12" Click="AddCustomer_Click" HorizontalAlignment="Right" Width="180"  />
+
+
+                <Button Content="X" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="-1.136,-0.1" Height="39" Width="52" Click="XButton" Background="#FFF90B0B" FontWeight="Bold" FontSize="20" Grid.Column="3" Margin="254,0,0,0" Grid.ColumnSpan="2"/>
+
+            </Grid>
+
+        </TabItem>
+
+
+
+    </TabControl>
+
+
 </Window>
