--- a/dotNet5782_8995_8035/PL/BaseStationWindow.xaml
+++ b/dotNet5782_8995_8035/PL/BaseStationWindow.xaml
@@ -70,6 +70,25 @@
                 </StackPanel>
             </StackPanel>
 
+            <!--<StackPanel>    todo tomoroow
+                <ListView x:Name="DroneList" ItemsSource="{Binding}" >
+                    <ListView.Background>
+                        <ImageBrush Opacity="10" ImageSource="/images/5.jpg"/>
+                    </ListView.Background>
+                    <ListView.View>
+                        <GridView>
+                            <GridViewColumn Header = "ID" DisplayMemberBinding="{Binding Path = Id}" />
+                            <GridViewColumn Header = "Model" DisplayMemberBinding="{Binding Path = Model}" />
+                            <GridViewColumn Header = "Weight" DisplayMemberBinding="{Binding Path = Weight}" />
+                            <GridViewColumn Header = "Battery" DisplayMemberBinding="{Binding Path = Battery , Converter={StaticResource converters}}" />
+                            <GridViewColumn Header = "Status" DisplayMemberBinding="{Binding Path = Status}" />
+                            <GridViewColumn Header = "location" DisplayMemberBinding="{Binding Path = Location}" />
+                            <GridViewColumn Header = "ParcelId" DisplayMemberBinding="{Binding Path = ParcelId}" />
+                        </GridView>
+                    </ListView.View>
+                </ListView>
+            </StackPanel>-->
+
             <StackPanel Height="20">
 
             </StackPanel>
