--- a/dotNet5782_8995_8035/PL/CustomerWindow.xaml
+++ b/dotNet5782_8995_8035/PL/CustomerWindow.xaml
@@ -9,15 +9,15 @@
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
         Height="600"
-        Width="440"
+        Width="600"
         Loaded="Loded"
         Title="{Binding}"
         >
-    
+
     <Window.Resources>
-        
+
     </Window.Resources>
-    
+
     <Grid>
         <StackPanel x:Name="AddingStack" Visibility="Collapsed"  Margin="5" HorizontalAlignment="Stretch">
             <Button Content="X" RenderTransformOrigin="-1.136,-0.1" Height="42" Width="49" Click="XButton" Background="#FFF90B0B" FontWeight="Bold" FontSize="20" HorizontalAlignment="Right"/>
@@ -69,6 +69,39 @@
                     <TextBox  Text="{Binding Location.Longitude, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}" Width="180" PreviewTextInput="FloatNumberValidationTextBox" />
                     <TextBox  Text="{Binding Location.Latitude, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}" Width="180" PreviewTextInput="FloatNumberValidationTextBox"/>
                 </StackPanel>
+            </StackPanel>
+
+            <StackPanel>
+                <ListView x:Name="listViewOfBaseStatin_FromCustomer" ItemsSource="{Binding}" >
+                    <ListView.Background>
+                        <ImageBrush Opacity="10"/>
+                    </ListView.Background>
+                    <ListView.View>
+                        <GridView>
+                            <GridViewColumn Header = "ID" DisplayMemberBinding="{Binding Path = Id}" />
+                            <GridViewColumn Header = "Weight" DisplayMemberBinding="{Binding Path = Weight}" />
+                            <GridViewColumn Header = "Priority" DisplayMemberBinding="{Binding Path = Priority}" />
+                            <GridViewColumn Header = "Status" DisplayMemberBinding="{Binding Path = Status}" />
+                            <GridViewColumn Header = "SenderOrReceiver" DisplayMemberBinding="{Binding Path = SenderOrReceiver}"/>
+                        </GridView>
+                    </ListView.View>
+                </ListView>
+            </StackPanel>
+            <StackPanel>
+                <ListView x:Name="listViewOfBaseStatin_ToCustomer" ItemsSource="{Binding}" >
+                    <ListView.Background>
+                        <ImageBrush Opacity="10"/>
+                    </ListView.Background>
+                    <ListView.View>
+                        <GridView>
+                            <GridViewColumn Header = "ID" DisplayMemberBinding="{Binding Path = Id}" />
+                            <GridViewColumn Header = "Weight" DisplayMemberBinding="{Binding Path = Weight}" />
+                            <GridViewColumn Header = "Priority" DisplayMemberBinding="{Binding Path = Priority}" />
+                            <GridViewColumn Header = "Status" DisplayMemberBinding="{Binding Path = Status}" />
+                            <GridViewColumn Header = "SenderOrReceiver" DisplayMemberBinding="{Binding Path = SenderOrReceiver}"/>
+                        </GridView>
+                    </ListView.View>
+                </ListView>
             </StackPanel>
 
             <StackPanel Height="20">
