--- a/dotNet5782_8995_8035/PL/ListsViewWindow.xaml
+++ b/dotNet5782_8995_8035/PL/ListsViewWindow.xaml
@@ -9,15 +9,12 @@
     x:Class="PL.ListsViewWindow"
         mc:Ignorable="d"
         Title="Lists View" Height="550" Width="1225" Loaded="Loded"
-        ResizeMode="NoResize">
+        ResizeMode="NoResize" >
 
     <Window.Resources>
 
     </Window.Resources>
 
-    <!--<Window.Background>
-        <ImageBrush ImageSource = "/images/5.jpg" Stretch="UniformToFill" />
-    </Window.Background>-->
 
     <StackPanel>
         <Button Content="X" HorizontalAlignment="Right"  Height="39" Width="52" Click="XButton" Background="#FFF90B0B" FontWeight="Bold" FontSize="20" Grid.Column="5" Margin="254,0,0,0" Grid.ColumnSpan="2"/>
@@ -26,6 +23,7 @@
             Style="{StaticResource MaterialDesignNavigatilRailTabControl}"
             TabStripPlacement="Top"
         >
+
             <TabItem x:Name="DronesView" Width="200">
                 <TabItem.Header>
                     <StackPanel
@@ -44,10 +42,8 @@
 
                 <Grid x:Name="MainGrid">
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="234*"/>
-                        <ColumnDefinition Width="71*"/>
-                        <ColumnDefinition Width="44*"/>
-                        <ColumnDefinition Width="261*"/>
+                        <ColumnDefinition Width="305*"/>
+                        <ColumnDefinition Width="305*"/>
                         <ColumnDefinition Width="305*"/>
                         <ColumnDefinition Width="293*"/>
                         <ColumnDefinition Width="12*"/>
@@ -57,11 +53,11 @@
                         <RowDefinition Height="400*"/>
                     </Grid.RowDefinitions>
 
-                    <ComboBox x:Name="StatusSelector" ItemsSource="{Binding}" Margin="27,24,28,5" Grid.Column="2" SelectedIndex="3" SelectionChanged ="StatusChoose" FontFamily="Segoe Print" Grid.ColumnSpan="2"/>
+                    <ComboBox x:Name="StatusSelector" ItemsSource="{Binding}" materialDesign:HintAssist.Hint="Status Selector" Margin="75,26,75,3" Grid.Column="1" SelectedIndex="3" SelectionChanged ="StatusChoose" FontFamily="Segoe Print"/>
 
-                    <ComboBox x:Name="WeightSelecter" ItemsSource="{Binding}" Margin="26,24,27,5" Grid.Column="4" SelectedIndex="3" SelectionChanged ="WeightChoose" FontFamily="Segoe Print"/>
+                    <ComboBox x:Name="WeightSelecter" ItemsSource="{Binding}" materialDesign:HintAssist.Hint="Weight Selecter" Margin="76,24,75,5" Grid.Column="2" SelectedIndex="3" SelectionChanged ="WeightChoose" FontFamily="Segoe Print"/>
 
-                    <ListView x:Name="DroneList" ItemsSource="{Binding}" Grid.Row="1" Margin="10,10,10,10" RenderTransformOrigin="0.831,0.089" Grid.ColumnSpan="7" MouseDoubleClick="ClickedDroneInList" MinHeight="5" >
+                    <ListView x:Name="DroneList" ItemsSource="{Binding}" Grid.Row="1" Margin="8,10,12,0" RenderTransformOrigin="0.831,0.089" Grid.ColumnSpan="5" MouseDoubleClick="ClickedDroneInList" MinHeight="5" Height="340" VerticalAlignment="Top" >
                         <ListView.Background>
                             <ImageBrush Opacity="10" ImageSource="/images/5.jpg"/>
                         </ListView.Background>
@@ -77,20 +73,13 @@
                             </GridView>
                         </ListView.View>
                     </ListView>
-                    <Button Content="Add Drone" Margin="0,12,0,12" Click="AddDrone_Click" HorizontalAlignment="Center" Width="180" Grid.ColumnSpan="2"  />
-                    <Label Content="Status selector" Grid.Column="3" HorizontalAlignment="Left" VerticalAlignment="Top" Width="156" Height="39" ScrollViewer.HorizontalScrollBarVisibility="Visible" FontFamily="Forte" FontSize="20" Background="Transparent" Foreground="#DDC3B63C" Margin="37,-7,0,0">
-                        <Label.Effect>
-                            <DropShadowEffect/>
-                        </Label.Effect>
-                    </Label>
-                    <Label Content="weight selector" Grid.Column="4" HorizontalAlignment="Left" VerticalAlignment="Top" Width="156" Height="39" ScrollViewer.HorizontalScrollBarVisibility="Visible" FontFamily="Forte" FontSize="20" Background="Transparent" Foreground="#DDC3B63C" Margin="80,-7,0,0">
-                        <Label.Effect>
-                            <DropShadowEffect/>
-                        </Label.Effect>
-                    </Label>
+                    <Button Content="Add Drone" Margin="0,12,0,12" Click="AddDrone_Click" HorizontalAlignment="Center" Width="180" Grid.Column="0"  />
+                    <Label Content="Status selector" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Top" Width="156" Height="39" FontSize="20" />
+                    <Label Content="weight selector" Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Top" Width="156" Height="39" FontSize="20"/>
 
                 </Grid>
             </TabItem>
+
 
             <TabItem Name="ParcelList" Width="200">
                 <TabItem.Header>
@@ -120,12 +109,8 @@
                         <RowDefinition Height="400*"/>
                     </Grid.RowDefinitions>
 
-                    <Label Content="Status selector" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Top" Width="156" Height="39" ScrollViewer.HorizontalScrollBarVisibility="Visible" FontFamily="Forte" FontSize="20" Background="Transparent" Foreground="#DDC3B63C" Margin="81,-7,0,0">
-                        <Label.Effect>
-                            <DropShadowEffect/>
-                        </Label.Effect>
-                    </Label>
-                    <ComboBox x:Name="ParcelStatusSelector" ItemsSource="{Binding}" Margin="27,24,27,5" Grid.Column="1" SelectedIndex="3" SelectionChanged ="ParcelStatusChoose" FontFamily="Segoe Print"/>
+                    <Label Content="Parcel Status Selector" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Top" Width="202" Height="39" FontSize="20"/>
+                    <ComboBox x:Name="ParcelStatusSelector" ItemsSource="{Binding}"  materialDesign:HintAssist.Hint="Parcel Status Selector" Margin="27,24,27,5" Grid.Column="1" SelectedIndex="3" SelectionChanged ="ParcelStatusChoose" FontFamily="Segoe Print"/>
 
 
                     <!--<Label Content="Status selector" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Top" Width="156" Height="39" ScrollViewer.HorizontalScrollBarVisibility="Visible" FontFamily="Forte" FontSize="20" Background="Transparent" Foreground="#DDC3B63C" Margin="81,-7,0,0">
@@ -142,9 +127,9 @@
                     </Label>
                     <ComboBox x:Name="Selecter" ItemsSource="{Binding}" Margin="27,24,27,5" Grid.Column="2" SelectedIndex="3" SelectionChanged ="WeightChoose" FontFamily="Segoe Print"/>-->
 
-                    <ListView x:Name="ListOfParcelsView" ItemsSource="{Binding}" Grid.Row="1" Margin="10,10,10,10" RenderTransformOrigin="0.831,0.089" Grid.ColumnSpan="5" MouseDoubleClick="ClickedParcelInList" MinHeight="5" >
+                    <ListView x:Name="ListOfParcelsView" ItemsSource="{Binding}" Margin="14,59,6,-354" RenderTransformOrigin="0.831,0.089" Grid.ColumnSpan="5" MouseDoubleClick="ClickedParcelInList" SelectionChanged="ListOfParcelsView_SelectionChanged" Grid.RowSpan="2" Height="320" >
                         <ListView.Background>
-                            <ImageBrush Opacity="10" ImageSource="/images/5.jpg"/>
+                            <ImageBrush Opacity="10"/>
                         </ListView.Background>
                         <ListView.View>
                             <GridView>
@@ -180,29 +165,21 @@
                       HorizontalAlignment="Center" />
                     </StackPanel>
                 </TabItem.Header>
-                <Grid>
+                <Grid Height="416" Margin="10,0,0,0" >
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="305*"/>
-                        <ColumnDefinition Width="70*"/>
-                        <ColumnDefinition Width="235*"/>
+                        <ColumnDefinition Width="305*"/>
                         <ColumnDefinition Width="305*"/>
                         <ColumnDefinition Width="293*"/>
                         <ColumnDefinition Width="12*"/>
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="50*"/>
+                        <RowDefinition Height="80*"/>
                         <RowDefinition Height="400*"/>
                     </Grid.RowDefinitions>
 
 
-                    <!--<Label Content="weight selector" Grid.Column="2" HorizontalAlignment="Left" VerticalAlignment="Top" Width="156" Height="39" ScrollViewer.HorizontalScrollBarVisibility="Visible" FontFamily="Forte" FontSize="20" Background="Transparent" Foreground="#DDC3B63C" Margin="81,-7,0,0">
-                        <Label.Effect>
-                            <DropShadowEffect/>
-                        </Label.Effect>
-                    </Label>
-                    <ComboBox x:Name="Selecter" ItemsSource="{Binding}" Margin="27,24,27,5" Grid.Column="2" SelectedIndex="3" SelectionChanged ="WeightChoose" FontFamily="Segoe Print"/>-->
-
-                    <ListView x:Name="ListOfBaseStationsView" ItemsSource="{Binding}" SelectedIndex="0" Margin="10,10,10,10" RenderTransformOrigin="0.831,0.089" MouseDoubleClick="ClickedBaseStationInList" MinHeight="5" Grid.ColumnSpan="6" Grid.Row="1" >
+                    <ListView x:Name="ListOfBaseStationsView" ItemsSource="{Binding}" SelectedIndex="0"  MouseDoubleClick="ClickedBaseStationInList" MinHeight="5" Grid.ColumnSpan="4" Margin="10,8,35,10" Grid.Row="1" >
                         <ListView.Background>
                             <ImageBrush Opacity="10" ImageSource="/images/5.jpg"/>
                         </ListView.Background>
@@ -216,9 +193,9 @@
                         </ListView.View>
                     </ListView>
 
-                    <ComboBox x:Name="NumberOfSlotsSelector" ItemsSource="{Binding}" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Center" Width="215" Height="32" SelectionChanged="BaseStationGuopingSelected" Grid.ColumnSpan="2" Margin="45,0,0,0"/>
-                    <Label Content="Label" Grid.Column="2" HorizontalAlignment="Left" Margin="119,7,0,0" VerticalAlignment="Top"/>
-
+                    <ComboBox x:Name="NumberOfSlotsSelector" ItemsSource="{Binding}"  materialDesign:HintAssist.Hint="Number Of Slots Selector" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Top" Width="215" Height="32" SelectionChanged="BaseStationGuopingSelected" FontFamily="Segoe Print" Margin="0,33,0,0"/>
+                    <Label Content="Number Of Slots Selector" Grid.Column="1" HorizontalAlignment="Center" FontSize="20" Width="253"/>
+                    <Button Content="Add Base Station" Margin="0,12,63,12" Click="AddBaseStationButton_Click" HorizontalAlignment="Right" Width="180"/>
                 </Grid>
 
             </TabItem>
@@ -240,7 +217,7 @@
                     </StackPanel>
                 </TabItem.Header>
 
-                <Grid>
+                <Grid Height="410">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="25*"/>
                         <ColumnDefinition Width="25*"/>
@@ -249,25 +226,19 @@
                         <ColumnDefinition/>
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="50*"/>
+                        <RowDefinition Height="80*"/>
                         <RowDefinition Height="400*"/>
                     </Grid.RowDefinitions>
 
                     <!--<Label Content="Status selector" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Top" Width="156" Height="39" ScrollViewer.HorizontalScrollBarVisibility="Visible" FontFamily="Forte" FontSize="20" Background="Transparent" Foreground="#DDC3B63C" Margin="81,-7,0,0">
-                        <Label.Effect>
-                            <DropShadowEffect/>
-                        </Label.Effect>
                     </Label>
                     <ComboBox x:Name="Selector" ItemsSource="{Binding}" Margin="27,24,27,5" Grid.Column="1" SelectedIndex="3" SelectionChanged ="StatusChoose" FontFamily="Segoe Print"/>
 
                     <Label Content="weight selector" Grid.Column="2" HorizontalAlignment="Left" VerticalAlignment="Top" Width="156" Height="39" ScrollViewer.HorizontalScrollBarVisibility="Visible" FontFamily="Forte" FontSize="20" Background="Transparent" Foreground="#DDC3B63C" Margin="81,-7,0,0">
-                        <Label.Effect>
-                            <DropShadowEffect/>
-                        </Label.Effect>
                     </Label>
                     <ComboBox x:Name="Selecter" ItemsSource="{Binding}" Margin="27,24,27,5" Grid.Column="2" SelectedIndex="3" SelectionChanged ="WeightChoose" FontFamily="Segoe Print"/>-->
 
-                    <ListView x:Name="ListOfCustomersView" ItemsSource="{Binding}" Margin="8,10,12,93" RenderTransformOrigin="0.831,0.089" MouseDoubleClick="ClickedCustomerInList" MinHeight="5" Grid.ColumnSpan="5" Grid.Row="1" >
+                    <ListView x:Name="ListOfCustomersView" ItemsSource="{Binding}" Margin="8,10,12,10" RenderTransformOrigin="0.831,0.089" MouseDoubleClick="ClickedCustomerInList" MinHeight="5" Grid.ColumnSpan="5" Grid.Row="1" >
                         <!--<ListView.Background>
                             <ImageBrush Opacity="10" ImageSource="/images/5.jpg"/>
                         </ListView.Background>-->
